Minor changes to buttons and screens.